# SETI

./: .gitignore
Shared/: Message.cpp  Message.h  SharedFunctions.h
Tcp/: API.h  CMakeLists.txt  CTcpServer.cpp  CTcpServer.h  ServerWorker.cpp  ServerWorker.h  main.cpp  stdinc.h
TcpClient/: API.h  CMakeLists.txt  ClientWorker.cpp  ClientWorker.h
UdpClient/: CMakeLists.txt  ClientWorker.cpp  ClientWorker.h  main.cpp
UdpServer/: API.h  CMakeLists.txt  CTcpServer.cpp  CTcpServer.h  ServerWorker.cpp  ServerWorker.h  main.cpp  stdinc.h
